# book_api

./: .dockerignore  .gitignore  Dockerfile  deployment.yaml  pyproject.toml  pytest.ini  service.yaml
alembic/: env.py
alembic/versions/: 048693f53f1f_added_the_comments_table.py  589f4ca94967_added_follow_unfollow_system.py  8800d2b382cd_new_url_cols.py  c5279fe273c2_initial.py  fc7280f26dee_new_fixes_to_the_cols.py
book_api/: auth.py  database.py  main.py  models.py  schemas.py  settings.py
book_api/alembic/: env.py
book_api/core/: event_bus.py
book_api/graphql_routes/: context.py  mutations.py  queries.py  schema.py  types.py
book_api/routers/: books.py  files.py  reviews.py  shelves.py  users.py
book_api/services/notifications/: email_service.py
book_api/services/storage/: file_service.py  test_permissions.py
book_api/utils/: book_utils.py
tests/: conftest.py  test_api.py  test_email.py  test_file_service.py  test_graphql.py
